   be , .For backwards compatibility we introduced this parameter.
   closes #166
   Suggested by: Dennis McRitchie ( dmcr at Princeton dot EDU )
   Fixed by    : Bas van der Vlies

 * Prevent mail loop. We could set the CC ticket field to
   the ticket email address.
    - For a new ticket and reply_all is set.
    - If the ticket CC field is updated via the subject line.
   closes #172
   Reported by: otto at bergerdata dot de
   Fixed vy   : Bas van der Vlies




2009-09-02
  * Implemented a new feature to drop the HTML version of multipart/alternative
    message part. Such a message part contains the same info. The info is sent
    in different formats and the client can decide which version to use.
    closes #30

    to enable in email2trac.conf:
	- drop_alternative_html_version: 1

    Implemented by: Bas van der Vlies

2009-08-20
  * updated aclocal.m4 to support python versions 2.5 and 2.6, closes #137
  * use the email addres in the reporter field, closes #136
  * Fixed an error in blog update function

    All Fixes by: Bas van der Vlies

  * if alternate notify template is set then also set ticket id. It will show
    up as ticket change, closes #142
    Reported by: hju att jochenkuhl dot de
    Fixed by: Bas van der Vlies

  * Error in urllib.quote(filename) could not handle unicode 
    filenames, closes #138
    Reported by: debacle at debian dot org
    Applied  by: Bas van der Vlies

  * Fixed an error when debug is on and the body message contains unicode
    strings, closes #144
    Reported by: trumbitta at gmail dot com
    Applied by: Bas van der Vlies

 * default trac version for email2trac is now updated to 0.11

2009-04-09
  * Fixed in parsing the reflow parameter, closes #123
    Reported by: tomasz dot sterna at sensisoft dot com
    Fixed by: Bas van der Vlies

   * implemented workflow for tickets that are reopend, closes #70
     Reported by: hju att jochenkuhl dot de
     Author by: Bas van der Vlies
